--- a/Data Science Projects/VisionScout/Deployment/requirements.txt
+++ b/Data Science Projects/VisionScout/Deployment/requirements.txt
@@ -7,3 +7,10 @@ numpy>=1.23.5
 matplotlib>=3.7.0
 gradio>=3.32.0
 git+https://github.com/openai/CLIP.git
+yt-dlp>=2023.3.4
+requests>=2.28.1
+transformers
+accelerate
+bitsandbytes
+sentencepiece
+huggingface_hub>=0.19.0
