--- a/Data Science Projects/PawMatchAI/Model_Deployment/requirements.txt
+++ b/Data Science Projects/PawMatchAI/Model_Deployment/requirements.txt
@@ -6,9 +6,11 @@ Pillow>=9.0.0,<11.0.0
 ultralytics>=8.0.0,<9.0.0
 timm>=0.9.0,<1.0.0
 diffusers>=0.20.0,<0.24.0
-transformers>=4.25.0,<4.35.0
+transformers>=4.41.0,<5.0.0
 accelerate>=0.18.0,<0.22.0
 xformers>=0.0.20,<0.1.0
 huggingface_hub>=0.15.0,<0.30.0
 gradio>=5.0.0,<6.0.0
 matplotlib>=3.5.0,<4.0.0
+sentence-transformers==5.1.0
+safetensors
